--- a/src/Game.Contract.Ont.Dungeon/Game.Contract.Ont.Dungeon.csproj
+++ b/src/Game.Contract.Ont.Dungeon/Game.Contract.Ont.Dungeon.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{D5663E7C-72BB-42B0-BC10-025283A51018}</ProjectGuid>
+    <ProjectGuid>{9529A6F6-BA86-4D64-B6BB-9E1A782ED37F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Gacha</RootNamespace>
-    <AssemblyName>Gacha</AssemblyName>
+    <RootNamespace>Game.Contract.Ont.Dungeon</RootNamespace>
+    <AssemblyName>Game.Contract.Ont.Dungeon</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -18,7 +18,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;--compatible</DefineConstants>
+    <DefineConstants>TRACE;DEBUG</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
@@ -33,7 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Ont.SmartContract.Framework">
-      <HintPath>..\bin\ont\Ont.SmartContract.Framework.dll</HintPath>
+      <HintPath>..\..\bin\ont\Ont.SmartContract.Framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Gacha.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
